@@ -945,6 +945,13 @@ int user_options_sanity (hashcat_ctx_t *hashcat_ctx)
     return -1;
   }
 
+  if (user_options->bitmap_max > 31)
+  {
+    event_log_error (hashcat_ctx, "Invalid --bitmap-max value specified - must be lower than 32.");
+
+    return -1;
+  }
+
   if (user_options->rp_gen_func_min > user_options->rp_gen_func_max)
   {
     event_log_error (hashcat_ctx, "Invalid --rp-gen-func-min value specified.");
